# sage-aasvogel

./: .gitignore  Makefile  README.md  build-all.sh  create-image.sh  emulate.sh  template.img
src/: CMakeLists.txt  toolchain.cmake
src/acpica/: CMakeLists.txt  Makefile  sa_shim.c
src/acpica/include/platform/: acenv.h  acsageaasvogel.h
src/acpica/resources/: rsdump.c
src/kernel/: .gitignore  CMakeLists.txt  Makefile  boot.asm  build.sh  doxygen.cfg  gdt.asm  gdt.cpp  kernel.cpp  linker.ld  menu.cfg  preinit.cpp
src/kernel/boot/: boot.S  boot.asm  boot.s  memory.c  memory.cpp  preinit.c  preinit.cpp  preinit.h  preinit.hpp  serial.c  serial.cpp  strings.c  strings.cpp
src/kernel/core/: acpi.c  bootparam.c  console.c  console.cpp  cpuid.c  cpuid.cpp  crash.c  crash.cpp  gdb_stub.c  gdt.S  gdt.c  gdt.cpp  gdt.s  idt.S  idt.asm  idt.c  idt.cpp  idt.s  kernel.c  kernel.cpp  klog.c  ksym.c  msr.c  sched.S  sched.c  serial.c  spinlock.S  spinlock.asm  spinlock.s  tty.c  unwind.c
src/kernel/cpu/: cpuid.c  gdt.c  idt.S  idt.c  msr.c
src/kernel/drivers/: serial.cpp
src/kernel/fs/: initrd.c  saif.c  vfs.c
src/kernel/include/: assert.h  assert.hpp  ctype.h  gdt.hpp  hwio.h  hwio.hpp  lock.h  math.h  multiboot.h  multiboot.hpp  printf.h  refcount.h  setjmp.h  string.h  string.hpp  tty.hpp  typedef.h  typedef.hpp
src/kernel/include/core/: acpi.h  bootparam.h  console.h  console.hpp  cpuid.h  cpuid.hpp  crash.h  crash.hpp  elf.h  gdb_stub.h  gdt.h  idt.h  idt.hpp  klog.h  ksym.h  msr.h  sched.h  serial.h  tty.h  unwind.h  version.h
src/kernel/include/cpu/: cpuid.h  idt.h  msr.h
src/kernel/include/drivers/: serial.hpp
src/kernel/include/fs/: initrd.h  saif.h  vfs.h
src/kernel/include/io/: console.h  tty.h
src/kernel/include/lock/: condvar.h  mutex.h  rwlock.h  semaphore.h  spinlock.h
src/kernel/include/memory/: early.h  mem.hpp  page.h  page_pae.h  phys.h  pool.h  virt.h
src/kernel/io/: acpi.c  console.c  serial.c  tty.c
src/kernel/lib/: cplusplus.asm  cplusplus.cpp  ctype.c  printf.c  setjmp.S  setjmp.c  string.c  string.cpp  tty.cpp
src/kernel/lock/: condvar.c  mutex.c  rwlock.c  semaphore.c  spinlock.S
src/kernel/memory/: early.c  mem.cpp  page.c  page_pae.c  phys.c  pool.c  virt.c
src/saif_packer/: CMakeLists.txt  main.c  pack.c  pack.h  saif.h
