CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("ACPICA" C)

ADD_DEFINITIONS(-DSAGE_AASVOGEL)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -c -O3 -ffreestanding -std=gnu11 -fvisibility=hidden -fno-omit-frame-pointer")

INCLUDE_DIRECTORIES("include" ${KERNEL_INCLUDE_DIRECTORY})
FILE(GLOB_RECURSE C_SRCS *.c)

ADD_LIBRARY(acpica STATIC EXCLUDE_FROM_ALL ${C_SRCS})

ADD_CUSTOM_COMMAND(TARGET acpica POST_BUILD
    COMMAND ln -nsf ${CMAKE_CURRENT_SOURCE_DIR}/include ${KERNEL_INCLUDE_DIRECTORY}/acpica
)
